#3304 closed defect (fixed)
HEVC Decoder Failure
| Reported by: | Jose Santiago | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avcodec |
| Version: | git-master | Keywords: | hevc |
| Cc: | jsantiago@haivision.com | Blocked By: | |
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
Summary of the bug:
How to reproduce:
% ffmpeg -i input ... output ffmpeg version built on ...
Patches should be submitted to the ffmpeg-devel mailing list and not this bug tracker.
Attachments (2)
Change History (15)
by , 13 years ago
| Attachment: | enc16_mc_500k.265 added |
|---|
by , 13 years ago
| Attachment: | hevcdec_enc16_mc_500k.patch added |
|---|
Patch that can make it decode. I dont know if this is the correct way to resolve the issue though.
comment:2 by , 13 years ago
I dont seem to be able to set the Ticket description. It probably should be:
HEVC Decoder fails to decode HEVC file that can be decoded by the reference decoder. The file in question is attached. I have made a minor change to hevc_ps.c (patch also included as attachment) after which FFMPEG can decode and play the file. However, I don't know if this is the correct way to solve the issue.
comment:3 by , 13 years ago
Please add your failing FFmpeg command line together with the complete, uncut console output to make this a valid ticket. Don't forget to send your patch to the ffmpeg-devel mailing list if you would like a developer to comment.
comment:4 by , 13 years ago
Command line parameters to reproduce the issue:
./stage/bin/ffmpeg -i ./enc16_mc_500k.265 -f rawvideo -vcodec rawvideo -pix_fmt yuv420p video.yuv
ffmpeg version 2.1.git-VF Copyright (c) 2000-2014 the FFmpeg developers
built on Jan 14 2014 16:41:46 with gcc 4.5.2 (GCC)
configuration: --extra-version=VF --prefix=/mnt/centshare/ffmpeg/trunk/build/build-linux/stage --extra-cflags='-I/mnt/centshare/ffmpeg/trunk/build/../src/libavformat -I/mnt/centshare/ffmpeg/trunk/build/../src/libavcodec ' --extra-ldflags='-L/mnt/centshare/ffmpeg/trunk/build/build-linux/stage/lib -Wl,-rpath -Wl,/mnt/centshare/ffmpeg/trunk/build/build-linux/stage/lib' --enable-static --enable-shared --enable-avfilter --enable-pthreads --enable-zlib --enable-bzlib --enable-runtime-cpudetect --enable-hardcoded-tables
libavutil 52. 62.100 / 52. 62.100
libavcodec 55. 48.101 / 55. 48.101
libavformat 55. 23.103 / 55. 23.103
libavdevice 55. 5.102 / 55. 5.102
libavfilter 4. 1.100 / 4. 1.100
libswscale 2. 5.101 / 2. 5.101
libswresample 0. 17.104 / 0. 17.104
[hevc @ 0x8087680] Unknown HEVC profile: 0
Last message repeated 1 times
[hevc @ 0x8087680] sps_max_num_reorder_pics out of range: 4
[hevc @ 0x8087680] SPS does not exist
[hevc @ 0x8087680] PPS id out of range: 0
[hevc @ 0x8087680] Unknown HEVC profile: 0
Last message repeated 1 times
[hevc @ 0x8087680] sps_max_num_reorder_pics out of range: 4
[hevc @ 0x8087680] Error parsing NAL unit #1.
[hevc @ 0x8087680] SPS does not exist
[hevc @ 0x8087680] Error parsing NAL unit #2.
[hevc @ 0x8087680] PPS id out of range: 0
[hevc @ 0x8087680] Error parsing NAL unit #3.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 2 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 2 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 2 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 2 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 2 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 4 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 4 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 3 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 3 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 2 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 2 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 2 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 2 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
Last message repeated 1 times
[hevc @ 0x8087680] Error parsing NAL unit #0.
[hevc @ 0x8087680] PPS id out of range: 0
[hevc @ 0x8086da0] decoding for stream 0 failed
[hevc @ 0x8086da0] Could not find codec parameters for stream 0 (Video: hevc): unspecified size
Consider increasing the value for the 'analyzeduration' and 'probesize' options
./enc16_mc_500k.265: could not find codec parameters
comment:5 by , 13 years ago
| Status: | new → open |
|---|
comment:6 by , 13 years ago
Patch posted to the ffmpeg-devel list.
Your mail to 'ffmpeg-devel' with the subject
Patch the Allows trac ticket 3304 to Decode
Is being held until the list moderator can review it for approval.
The reason it is being held:
Post by non-member to a members-only list
Either the message will get posted to the list, or you will receive
notification of the moderator's decision. If you would like to cancel
this posting, please visit the following URL:
http://ffmpeg.org/mailman/confirm/ffmpeg-devel/8e68ba3e3f586d9a4835b6d417035e84bd071508
comment:7 by , 13 years ago
This is the second time that you make us part of a message that you received because you failed to subscribe to ffmpeg-devel (which is necessary to become part of the discussion of your patch) before sending a patch.
What are you trying to tell us?
follow-up: 9 comment:8 by , 13 years ago
The more of a hastle you make it for people to contribute, the less likely they will be to contribute. I need to create an account on the trac system, a different account on the develop mailing list. You have an issue tracking system, but the developers wont be bothered to read the trac issues. OK. So I submit a patch, I have submitted more than one patch that was never accepted by the moderator for inclusion in the list. I just have a feeling that this one will be ignored as well. Thanks for asking tho -).
comment:9 by , 13 years ago
Replying to jlsantiago0:
The more of a hastle you make it for people to contribute, the less likely they will be to contribute.
You do understand that time is the only limiting factor for FFmpeg development, ie that we have to find ways to make it as simple as possible for everybody to contribute to the development discussion? That is why we use one mailing list for all patches and their reviews.
I need to create an account on the trac system, a different account on the develop mailing list.
You need to create an account on trac if you want to report bugs, you have to subscribe to the developer mailing list if you want to contribute to FFmpeg development.
You have an issue tracking system, but the developers wont be bothered to read the trac issues.
Afaict, this is not true.
But the patch review takes place on the development mailing list to make sure all developers have to possibility to comment on patches.
OK. So I submit a patch, I have submitted more than one patch that was never accepted by the moderator for inclusion in the list.
I saw this one:
http://thread.gmane.org/gmane.comp.video.ffmpeg.devel/167998
Did you see the reply? Any reason why you did not comment?
I just have a feeling that this one will be ignored as well.
http://thread.gmane.org/gmane.comp.video.ffmpeg.devel/173396
comment:11 by , 13 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
Fixed by Michael in ab296c7a
Thank you for the report!
follow-up: 13 comment:12 by , 13 years ago
Was that file produced by an encoder? If so, the encoder should be fixed because this clearly violates the spec, even though the reference decoder doesn't complain (I'll probably send them a patch to do so). At the very least, ffmpeg should not silently ignore this but display a warning.
comment:13 by , 13 years ago
Replying to smarter:
At the very least, ffmpeg should not silently ignore this but display a warning.
FFmpeg does, theres a av_log() immedeatly above the changed code



H.264 file that cannot be decoded by FFMPEG.