avcodec/hevc_ps: Override max_dec_pic_buffering when its inconsistent with num_reorder_pics

Fixes Ticket3304

Alternatively max_dec_pic_buffering could be removed completely as its not used.

Based on a patch by Jose Santiago <santiago@haivision.com>
Signed-off-by: Michael Niedermayer <michaelni@gmx.at>